package bufrCdmIndex;

option java_package = "ucar.nc2.ft.point.bufr";
option java_outer_classname = "BufrCdmIndexProto";

message Station {
  required string id = 1;
  required double lat = 2;
  required double lon = 3;
  optional double alt = 4;
  optional string desc = 5;
  optional string wmoId = 6;
  required int32 count = 7;
}

enum FldAction {
  none = 1;
  remove = 2;
  asMissing = 3;
  asArray = 4;
  concat = 5;
}

enum FldType {
  lat=1;
  lon=2;
  height=3;
  heightAboveStation=4;
  heightOfStation=5;
  stationId=10;
  stationDesc=11;
  wmoId=12;
  wmoBlock=13;
  year=15;
  month=16;
  day=17;
  hour=18;
  minute=19;
  sec=20;
  doy=21;
  timeIncr=22;
  incrS=23;
}

message Field {
  required uint32 fxy = 1;
  optional string name = 2;
  repeated Field flds = 3;
  optional FldAction action = 4;
  optional FldType type = 5;
  optional uint32 min = 6;
  optional uint32 max = 7;
  optional string desc = 8;
  optional string units = 9;
}

message BufrIndex {
  required string filename = 1;
  repeated Station stations = 2;
  required Field root = 3;
  required uint64 start = 4;
  required uint64 end = 5;
}

//  cd c:/dev/github/thredds/bufr/src/main/java
//  protoc --proto_path=. --java_out=. ucar/nc2/ft/point/bufr/bufrCdmIndex.proto

